# contactpred-felsenstein

./: .gitignore  CMakeLists.txt  debug_tools.h  dummy_test.c  felsenstein.c  felsenstein.h  felsenstein_faster.c  felsenstein_faster.h  felsenstein_lin.c  felsenstein_lin.h  felsenstein_logspace.c  felsenstein_logspace_faster.c  felsenstein_logspace_faster_simdstructure.c  felsenstein_logspace_float.c  felsenstein_logspace_float_log2.c  felsenstein_logspace_simd.c  felsenstein_logtest.c  felsenstein_logtest16.c  felsenstein_logtest_faster.c  felsenstein_logtest_faster_simdstructure.c  felsenstein_logtest_simd.c  felsenstein_simd.c  felsenstein_simd.h  felsenstein_simd_test.c  felsenstein_simdstructure.h  felsenstein_test.c  felsenstein_test16.c  simd_functions.h  simd_functions_pd.h  simd_functions_ps.h  simd_test.c  test_simd_functions_pd.c
cmake/: CheckSSEFeatures.cmake  FindMSan.cmake
lib/: simd.h
py/: .gitignore  2col_optimizer.py  2col_optimizer_simd.py  braw2seqprobs.py  build_felsenstein.sh  build_felsenstein_faster.sh  build_felsenstein_faster_float.sh  build_felsenstein_faster_unrooted.sh  build_felsenstein_float.sh  build_felsenstein_float_log2.sh  build_felsenstein_simd.sh  build_felsenstein_simd_float.sh  build_pam_distance.sh  build_utils.sh  debug_tools.h  felsenstein.h  felsenstein_faster.c  felsenstein_faster.h  felsenstein_faster_float.h  felsenstein_float.h  felsenstein_float_log2.h  felsenstein_logspace.c  felsenstein_logspace_faster.c  felsenstein_logspace_faster_float.c  felsenstein_logspace_float.c  felsenstein_logspace_float_log2.c  felsenstein_logspace_simd.c  felsenstein_simd.c  felsenstein_simd.h  global_cp.py  indepmsa2nijab.py  msa2distmatrix.py  msa2indep_counts.py  msa2nijab.py  msa2p_ijab.py  msa2tree.py  msa2wijab.py  optimize_felsenstein.pyx  optimize_felsenstein_faster.pyx  optimize_felsenstein_faster_float.pyx  (+21 more)
